[gd_scene load_steps=15 format=2]

[ext_resource path="res://Ahmed/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Nike/character.png" type="Texture" id=2]
[ext_resource path="res://Ahmed/Scenes/Elements/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Joris/Jump3.wav" type="AudioStream" id=5]
[ext_resource path="res://Joris/Jump2.wav" type="AudioStream" id=6]
[ext_resource path="res://Ahmed/Scenes/Elements/Audio.gd" type="Script" id=7]
[ext_resource path="res://Joris/Land2.wav" type="AudioStream" id=8]
[ext_resource path="res://Joris/Run.wav" type="AudioStream" id=9]
[ext_resource path="res://Joris/CratePickup.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.0
height = 0.0

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 18, 14, 18 ), Rect2( 15, 18, 14, 17 ), Rect2( 0, 18, 14, 18 ), Rect2( 30, 18, 14, 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0.5 ), Vector2( 1, 0 ), Vector2( 1, 0.5 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 45, 19, 13, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 37, 13, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -1.5 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 52, 0, 15, 18 ), Rect2( 15, 36, 14, 16 ), Rect2( 18, 0, 16, 17 ), Rect2( 0, 0, 17, 17 ), Rect2( 30, 36, 14, 16 ), Rect2( 35, 0, 16, 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ), Vector2( 1, 1 ), Vector2( 1, -0.5 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 1, -0.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 1, 0 )
region_enabled = true
region_rect = Rect2( 0, 18, 14, 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -2 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
offset_h = 0.86
offset_v = -1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/Jump_Down = SubResource( 7 )
anims/Jump_Up = SubResource( 5 )
anims/Run = SubResource( 6 )

[node name="Audio" type="Node" parent="."]
script = ExtResource( 7 )

[node name="AudioJump2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )

[node name="AudioJump3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )

[node name="AudioLand" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
volume_db = -21.0

[node name="AudioRun" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
volume_db = -21.0
pitch_scale = 0.5

[node name="Inventory" type="Node2D" parent="." groups=["Inventory"]]
position = Vector2( 0, -25 )
script = ExtResource( 3 )
carriedItemOffset = 12

[node name="AudioPickup" type="AudioStreamPlayer" parent="Inventory"]
stream = ExtResource( 10 )
